test/mlir/reduce_sum_bad_case_5.mlir.stderr
test/mlir/reduce_sum_bad_case_5.mlir:3:10: error: 'colgm.reduce_sum' op output shape mismatch: expected=[2, 4], actual=[4, 2]
    %0 = colgm.reduce_sum %arg {axes = [1]} : tensor<2x3x4xf32> -> tensor<4x2xf32>
         ^
test/mlir/reduce_sum_bad_case_5.mlir:3:10: note: see current operation: %0 = "colgm.reduce_sum"(%arg0) {axes = [1]} : (tensor<2x3x4xf32>) -> tensor<4x2xf32>
